[gd_scene load_steps=17 format=3 uid="uid://g6o88phpm83u"]

[ext_resource type="Texture2D" uid="uid://bwl3d7c2mbiq6" path="res://assets/Sabby_Logo.png" id="1_iq3sc"]
[ext_resource type="Script" path="res://src/carousel.gd" id="2_adm8u"]
[ext_resource type="Theme" path="res://assets/theme.tres" id="3_igbkj"]
[ext_resource type="Script" path="res://src/close_button.gd" id="5_vpbcm"]

[sub_resource type="Animation" id="Animation_geacf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(108, 178)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nenu3"]
resource_name = "show_details"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.31864, 2.2974, 0.0412346),
"update": 0,
"values": [Vector2(108, 200), Vector2(108, 166), Vector2(108, 178)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.683019, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_itmky"]
resource_name = "to_carousel"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmo82"]
_data = {
"RESET": SubResource("Animation_geacf"),
"show_details": SubResource("Animation_nenu3"),
"to_carousel": SubResource("Animation_itmky")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1gw1"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rkxi"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f7kev"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtqn4"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(0.854902, 0.854902, 0.854902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3opi"]
bg_color = Color(0.941176, 0.941176, 0.941176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfky6"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.533333, 0.615686, 0.666667, 0.180392)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_0nupn"]
Button/colors/font_color = Color(0.141176, 0.105882, 0.219608, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_j1gw1")
Button/styles/focus = SubResource("StyleBoxFlat_5rkxi")
Button/styles/hover = SubResource("StyleBoxFlat_f7kev")
Button/styles/normal = SubResource("StyleBoxFlat_vtqn4")
Button/styles/pressed = SubResource("StyleBoxFlat_j3opi")
Label/styles/normal = SubResource("StyleBoxFlat_kfky6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3iwp"]
bg_color = Color(0.121569, 0.14902, 0.235294, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, 5)
scale = Vector2(0.304749, 0.304749)
texture = ExtResource("1_iq3sc")
centered = false

[node name="Carousel" type="Control" parent="."]
y_sort_enabled = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_adm8u")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
autoplay = "to_carousel"
libraries = {
"": SubResource("AnimationLibrary_qmo82")
}

[node name="Welcome" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -129.5
offset_right = 129.5
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("3_igbkj")
text = "SABBATICAL ARCADE"
horizontal_alignment = 1

[node name="CartInfo" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.5
offset_top = -135.0
offset_right = 140.5
grow_horizontal = 2
grow_vertical = 0

[node name="GameTitle" type="Label" parent="UI/CartInfo"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_igbkj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "GAME TITLE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Author" type="Label" parent="UI/CartInfo"]
modulate = Color(0.862745, 0.584314, 0.698039, 1)
layout_mode = 2
theme = ExtResource("3_igbkj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
text = "AUTHOR"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 108.0
offset_top = 178.0
offset_right = 1108.0
offset_bottom = 478.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0nupn")
theme_override_styles/panel = SubResource("StyleBoxFlat_l3iwp")

[node name="DetailBox" type="HBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_igbkj")

[node name="CartCover" type="TextureRect" parent="UI/Panel/DetailBox"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_igbkj")
expand_mode = 3
stretch_mode = 5

[node name="CartDetails" type="VBoxContainer" parent="UI/Panel/DetailBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_igbkj")

[node name="Description" type="Label" parent="UI/Panel/DetailBox/CartDetails"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_igbkj")
text = "(description)"
autowrap_mode = 2

[node name="Menu" type="HBoxContainer" parent="UI/Panel/DetailBox/CartDetails"]
layout_mode = 2

[node name="Play" type="Button" parent="UI/Panel/DetailBox/CartDetails/Menu"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_igbkj")
text = "PLAY"

[node name="Back" type="Button" parent="UI/Panel/DetailBox/CartDetails/Menu"]
layout_mode = 2
theme = ExtResource("3_igbkj")
text = "BACK
"

[node name="LOADING" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -53.5
offset_right = 132.0
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_igbkj")
theme_override_colors/font_outline_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
theme_override_constants/outline_size = 64
theme_override_font_sizes/font_size = 80
text = "LOADING"

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 36.0
grow_horizontal = 0
text = "X"
script = ExtResource("5_vpbcm")

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -28.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_igbkj")
theme_override_font_sizes/font_size = 12
text = "Made by gleeson"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="Close" to="Close" method="_on_close"]
